--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.21.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.6.3",
     "remult": "latest"
   },
   "devDependencies": {
