--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -16,7 +16,8 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "experimentalDecorators": true,
   },
   "include": ["vite.config.ts"]
 }
